# mediahandling

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  Usage.md  mediahandling.cpp  mediahandling.h  vcpkg.json
Include/: gsl-lite.hpp  imediaframe.h  imediasink.h  imediasource.h  imediastream.h  logging.h  mediahandling.h  mediapropertyobject.h  rational.h  timecode.h  types.h
RegressionTests/: 51test.ods  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  ffmpegsinktest.cpp  ffmpegsourcetest.cpp  ffmpegstreamtest.cpp  main.cpp  test.csv  test.ods  timecodetest.cpp  typetest.cpp
RegressionTests/ReferenceMedia/Audio/ac3/: 5_1.ac3
RegressionTests/ReferenceMedia/Image/: test-003.tiff  test-004.jp2
RegressionTests/ReferenceMedia/Image/sequence/: im_sequence-0001.dpx  im_sequence-0002.dpx  im_sequence-0003.dpx  im_sequence-0004.dpx  im_sequence-0005.dpx  im_sequence-0006.dpx  im_sequence-0007.dpx  im_sequence-0008.dpx  im_sequence-0009.dpx  im_sequence-0010.dpx  im_sequence-0011.dpx  im_sequence-0012.dpx  im_sequence-0013.dpx  im_sequence-0014.dpx  im_sequence-0015.dpx  im_sequence-0016.dpx  im_sequence-0017.dpx  im_sequence-0018.dpx  im_sequence-0019.dpx  im_sequence-0020.dpx  im_sequence-0021.dpx  im_sequence-0022.dpx  im_sequence-0023.dpx  im_sequence-0024.dpx  im_sequence-0025.dpx  im_sequence-0026.dpx  im_sequence-0027.dpx  im_sequence-0028.dpx  im_sequence-0029.dpx  im_sequence-0030.dpx  im_sequence-0031.dpx  im_sequence-0032.dpx  im_sequence-0033.dpx  im_sequence-0034.dpx  im_sequence-0035.dpx  im_sequence-0036.dpx  im_sequence-0037.dpx  im_sequence-0038.dpx  im_sequence-0039.dpx  im_sequence-0040.dpx  (+61 more)
RegressionTests/ReferenceMedia/Image/sequence/jp2/: im_sequence0001.JP2  im_sequence0002.JP2  im_sequence0003.JP2  im_sequence0004.JP2  im_sequence0005.JP2
RegressionTests/ReferenceMedia/Video/dnxhd/: fhd_dnxhd.mov
RegressionTests/ReferenceMedia/Video/h265/: h265_320_10hr.mov
RegressionTests/ReferenceMedia/Video/jpeg2000/: bark.mxf
RegressionTests/ReferenceMedia/Video/mpeg2/: interlaced_avc.MTS  proxympeg2.mov
RegressionTests/ReferenceMedia/Video/mxf/: mpeg2.mxf
Src/: logging.cpp  mediahandling.cpp  mediapropertyobject.cpp  timecode.cpp  types.cpp
backend/ffmpeg/: ffmpegsink.cpp  ffmpegsource.cpp  ffmpegsource.h  ffmpegstream.cpp  ffmpegstream.h
cmake/: Findffmpeg.cmake
examples/: play_audio.cpp
ffmpeg/: ffmpegmediaframe.cpp  ffmpegmediaframe.h  ffmpegsink.cpp  ffmpegsink.h  ffmpegsource.cpp  ffmpegsource.h  ffmpegstream.cpp  ffmpegstream.h  ffmpegtypes.cpp  ffmpegtypes.h
test/: Makefile  main.cpp
unittests/: ffmpegsourcetest.cpp  ffmpegsourcetest.h  ffmpegstreamtest.cpp  ffmpegstreamtest.h
